@@ -1,3 +1,9 @@
+Pending release notes...
+
+Note: Server changes are not backwards compatible. To use new
+rebalancing tooling, servers must be upgraded before hand.
+
+
 Release 1.3.3 on 04/24/2013 
 * VoldemortBuildandPush
   - Fixed bug with schema check
